--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,107 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap");
+
+.btn-arrow:hover .arrow svg g path:last-of-type {
+  transition: all 0.05s ease;
+  opacity: 1;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.btn-arrow:hover .arrow svg g path:first-of-type {
+  transition: all 0.1s ease;
+  transform: translateX(3.2px);
 }
 
-* {
+.btn-arrow:hover .arrowLg svg g path:last-of-type {
+  transition: all 0.05s ease;
+  opacity: 1;
+}
+
+.btn-arrow:hover .arrowLg svg g path:first-of-type {
+  transition: all 0.1s ease;
+  transform: translateX(10px);
+}
+
+.project {
+  position: relative;
+  display: inline-block;
+}
+
+.project:after {
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  content: " ";
   box-sizing: border-box;
+  box-shadow: -8px 8px 8px 5px #5eead4;
+  border-radius: 5px;
+  opacity: 0;
+  transition: opacity 0.2s ease;
+}
+
+.project:hover::after {
+  opacity: 1;
+}
+
+.animate-flash {
+  animation: flash 1s infinite;
+}
+
+@keyframes flash {
+  0%,
+  49% {
+    opacity: 0;
+  }
+  50%,
+  100% {
+    opacity: 1;
+  }
+}
+
+.animation-typing {
+  box-shadow: 2px 0 0 white;
+  width: 23ch;
+  overflow: hidden;
+  color: #fff;
+  white-space: nowrap;
+  animation: invisible 4.5s, caret 0.5s step-end infinite alternate,
+    type 5s steps(23, end) 4.5s;
+}
+
+.animation-typing-hide {
+  box-shadow: 2px 0 0 white;
+  width: 23ch;
+  overflow: hidden;
+  color: #fff;
+  white-space: nowrap;
+  animation: caret 0.5s step-end infinite alternate, type 5s steps(23, end),
+    hidden 0.5s ease 4.5s infinite;
+}
+
+@keyframes invisible {
+  0%,
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes hidden {
+  0%,
+  100% {
+    box-shadow: 0px 0 0 transparent;
+  }
+}
+
+@keyframes type {
+  0% {
+    width: 0;
+  }
+}
+@keyframes caret {
+  50% {
+    box-shadow: 0.6em 0 0 transparent;
+  }
 }
