--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,3 +105,45 @@
     box-shadow: 0.6em 0 0 transparent;
   }
 }
+
+.contact-enter {
+  opacity: 0;
+  transform: translateX(100%);
+  display: "flex";
+}
+.contact-enter-active {
+  opacity: 1;
+  transform: translateX(0);
+  transition: opacity 300ms, transform 300ms;
+  height: 100vh;
+  display: "flex";
+}
+.contact-exit {
+  opacity: 1;
+  display: "flex";
+}
+.contact-exit-active {
+  opacity: 0;
+  transform: translateX(100%);
+  transition: opacity 300ms, transform 300ms;
+  display: "flex";
+}
+
+.fade-enter {
+  opacity: 0;
+  transform: scale(95%);
+}
+.fade-enter-active {
+  opacity: 1;
+  transform: scale(100%);
+  transition: opacity 300ms, transform 300ms;
+}
+.fade-exit {
+  opacity: 1;
+  transform: scale(100%);
+}
+.fade-exit-active {
+  opacity: 0;
+  transform: scale(95%);
+  transition: opacity 300ms, transform 300ms;
+}
